# qa-assist

./: .gitignore  CHECKLIST.md  README.md  package-lock.json  package.json  playwright.config.js
ai/: .env.example  README.md  adk_orchestrator.py  main.py  orchestrator.py  pyproject.toml  requirements.txt
ai/agents/: __init__.py  agent.py
ai/agents/analysis/: __init__.py  log_analyst.py  repro_planner.py  synthesizer.py  video_analyst.py
ai/agents/chat/: __init__.py  qa_chat.py
ai/app/: main.py
ai/app/api/: analysis.py  chat.py  health.py
ai/core/: config.py  logging.py
ai/models/: requests.py
ai/services/: adk_orchestrator.py  checkpoints.py  orchestrator.py  orchestrator_provider.py
ai/tests/: test_api.py  test_checkpoints.py
ai/tools/: __init__.py  checkpoint_tools.py  event_tools.py
backend/: .env.example  .gitignore  README.md  mix.exs
docs/: demo-script.md  implementation-audit.md  release-checklist.md  submission.md  writeup.md
extension/: .env.example  README.md  background.js  capture.css  capture.html  capture.js  content.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  styles.css  tailwind.css
infra/: .env.example  docker-compose.yml
plan/: 01-problem-and-goals.md  02-requirements-and-decisions.md  03-architecture-and-dataflow.md  04-data-model.md  05-api.md  06-extension.md  07-webapp.md  08-ai-orchestration.md  09-milestones-and-risks.md  10-hackathon-compliance.md  11-demo-script.md  12-implementation-plan.md  README.md
tools/: verify-playwright.js
webapp/: .env.example  README.md  app.js  index.html  (+5 more)
(+95 files in other folders)
